Update tracking code in checkTracking function

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function checkTracking(){
     var code = document.getElementById("tracking").value;
     var result = document.getElementById("result");
 
-    if(code === "SC-AYD-0001"){
+    if(code === "AP20231222167"){{
         result.innerHTML = `
         <p><b>Alıcı:</b> SUAD EL NASEN</p>
         <p><b>Durum:</b> Hazırlanıyor</p>
