--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+<meta charset="UTF-8">
+<title>Kargo Takip Sistemi</title>
 
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f4f4;
+  padding: 40px;
+}
+
+.container {
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  width: 400px;
+  margin: auto;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  text-align: center;
+}
+
+input {
+  width: 80%;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+button {
+  padding: 10px 20px;
+  background: #1e90ff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.result {
+  margin-top: 20px;
+  font-weight: bold;
+  text-align: left;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+  <h2>Kargo Takip Sistemi</h2>
+
+  <input type="text" id="tracking" placeholder="Takip Numaranızı Girin">
+  <br>
+  <button onclick="checkTracking()">Sorgula</button>
+
+  <div class="result" id="result"></div>
+</div>
+
+<script>
+function checkTracking() {
+  var code = document.getElementById("tracking").value;
+  var result = document.getElementById("result");
+
+  if (code === "AP20231222167") {
+    result.innerHTML =
+      "<p><strong>Alıcı:</strong> SUAD EL NASEN</p>" +
+      "<p><strong>Adres:</strong> Çarşı, Şht. Er Mehmet Aydın Sk. No:5, 09570 Köşk/Aydın</p>" +
+      "<p><strong>İletişim:</strong> 05354850091</p>" +
+      "<p><strong>Ödenmiş:</strong> 7000 TL</p>" +
+      "<p><strong>Siparişiniz:</strong> TV + Et Makinası</p>" +
+      "<p><strong>Durum:</strong> Hazırlanıyor</p>";
+  } else {
+    result.innerHTML = "Takip numarası bulunamadı.";
+  }
+}
+</script>
+
+</body>
+</html>
