--- a/index.html
+++ b/index.html
@@ -2,77 +2,39 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Kargo Takip Sistemi</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ALSAEED KARGO - Kargo Takip</title>
 
 <style>
 body {
+  margin: 0;
   font-family: Arial, sans-serif;
-  background: #f4f4f4;
-  padding: 40px;
+  background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
 }
 
-.container {
-  background: white;
-  padding: 30px;
-  border-radius: 10px;
-  width: 400px;
-  margin: auto;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  text-align: center;
-}
-
-input {
-  width: 80%;
-  padding: 10px;
-  margin: 10px 0;
-}
-
-button {
-  padding: 10px 20px;
-  background: #1e90ff;
+/* HEADER */
+.header {
+  background: #0d47a1;
   color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.result {
-  margin-top: 20px;
+  text-align: center;
+  padding: 25px 10px;
+  font-size: 24px;
   font-weight: bold;
-  text-align: left;
+  letter-spacing: 2px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
-</style>
-</head>
 
-<body>
-
-<div class="container">
-  <h2>Kargo Takip Sistemi</h2>
-
-  <input type="text" id="tracking" placeholder="Takip Numaranızı Girin">
-  <br>
-  <button onclick="checkTracking()">Sorgula</button>
-
-  <div class="result" id="result"></div>
-</div>
-
-<script>
-function checkTracking() {
-  var code = document.getElementById("tracking").value;
-  var result = document.getElementById("result");
-
-  if (code === "AP20231222167") {
-    result.innerHTML =
-      "<p><strong>Alıcı:</strong> SUAD EL NASEN</p>" +
-      "<p><strong>Adres:</strong> Çarşı, Şht. Er Mehmet Aydın Sk. No:5, 09570 Köşk/Aydın</p>" +
-      "<p><strong>İletişim:</strong> 05354850091</p>" +
-      "<p><strong>Ödenmiş:</strong> 7000 TL</p>" +
-      "<p><strong>Siparişiniz:</strong> TV + Et Makinası</p>" +
-      "<p><strong>Durum:</strong> Hazırlanıyor</p>";
-  } else {
-    result.innerHTML = "Takip numarası bulunamadı.";
-  }
+.header p {
+  font-size: 14px;
+  margin: 5px 0 0;
+  color: #bbdefb;
 }
-</script>
 
-</body>
-</html>
+/* CONTAINER */
+.container {
+  background: rgba(255,255,255,0.95);
+  padding: 30px;
+  border-radius: 15px;
+  width: 90%;
+  max-width: 420px;
+  margin: 40
