--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ body{
   background:linear-gradient(to bottom,#0f2027,#203a43,#2c5364);
 }
 
-/* HEADER */
 .header{
   background:#0d47a1;
   color:white;
@@ -29,7 +28,6 @@ body{
   color:#bbdefb;
 }
 
-/* CONTAINER */
 .container{
   background:white;
   padding:25px;
@@ -39,10 +37,6 @@ body{
   margin:30px auto;
   box-shadow:0 15px 35px rgba(0,0,0,0.4);
   text-align:center;
-}
-
-h2{
-  color:#0d47a1;
 }
 
 input{
@@ -74,7 +68,6 @@ button{
   color:#ff9800;
 }
 
-/* TRACKING STEPS */
 .tracking-steps{
   display:flex;
   justify-content:space-between;
@@ -124,7 +117,6 @@ button{
   margin-top:8px;
 }
 
-/* TABLE */
 .table-box{
   margin-top:30px;
   border-radius:10px;
@@ -194,74 +186,94 @@ tr:nth-child(even){
 </div>
 
 <script>
+
+var shipments = {
+
+  "AP20231222167": {
+    alici: "SUAD EL NASEN",
+    sehir: "Aydın / Türkiye",
+    durum: "Dağıtıma Çıkarılacak",
+    step: 3,
+    hareketler: [
+      ["05.04.2024 06:28","Gönderi dağıtım şubesinde."],
+      ["05.04.2024 05:57","Gönderi varış transfer merkezinde."],
+      ["02.04.2024 17:59","Gönderi çıkış hat aracına yüklendi."],
+      ["02.04.2024 09:40","Gönderi kabulü yapıldı."]
+    ]
+  },
+
+  "TR20240001": {
+    alici: "AHMET YILMAZ",
+    sehir: "İstanbul / Türkiye",
+    durum: "Transfer Sürecinde",
+    step: 2,
+    hareketler: [
+      ["10.05.2024 09:00","Gönderi kabul edildi."],
+      ["10.05.2024 14:30","Transfer merkezine ulaştı."]
+    ]
+  },
+
+  "TR20240002": {
+    alici: "MEHMET DEMİR",
+    sehir: "Ankara / Türkiye",
+    durum: "Teslim Edildi",
+    step: 4,
+    hareketler: [
+      ["12.05.2024 10:15","Gönderi teslim edildi."]
+    ]
+  }
+
+};
+
 function checkTracking(){
   var code=document.getElementById("tracking").value;
   var result=document.getElementById("result");
   var steps=document.getElementById("stepsArea");
   var table=document.getElementById("tableArea");
 
-  if(code==="AP20231222167"){
+  if(shipments[code]){
+    var data=shipments[code];
 
     result.innerHTML=
-      "<p><strong>Teslimat No:</strong> AP20231222167</p>"+
-      "<p><strong>Alıcı:</strong> SUAD EL NASEN</p>"+
-      "<p><strong>Şehir:</strong> Aydın / Türkiye</p>"+
-      "<p><strong>Durum:</strong> <span class='status'>Dağıtıma Çıkarılacak</span></p>";
+      "<p><strong>Teslimat No:</strong> "+code+"</p>"+
+      "<p><strong>Alıcı:</strong> "+data.alici+"</p>"+
+      "<p><strong>Şehir:</strong> "+data.sehir+"</p>"+
+      "<p><strong>Durum:</strong> <span class='status'>"+data.durum+"</span></p>";
 
     steps.innerHTML=`
     <div class="tracking-steps">
-      <div class="step completed">
+      <div class="step ${data.step>=1?"completed":""}">
         <div class="circle">✓</div>
         <p>Kabul</p>
       </div>
-      <div class="step completed">
+      <div class="step ${data.step>=2?"completed":""}">
         <div class="circle">✓</div>
         <p>Transfer</p>
       </div>
-      <div class="step active">
+      <div class="step ${data.step==3?"active":""}">
         <div class="circle">🚚</div>
         <p>Dağıtım</p>
       </div>
-      <div class="step">
+      <div class="step ${data.step==4?"completed":""}">
         <div class="circle">📦</div>
         <p>Teslim</p>
       </div>
     </div>`;
 
+    var rows="";
+    data.hareketler.forEach(function(item){
+      rows+="<tr><td>"+item[0]+"</td><td>"+item[1]+"</td></tr>";
+    });
+
     table.innerHTML=`
     <div class="table-box">
-      <div class="table-header">
-        Teslimat Numarası: AP20231222167
-      </div>
+      <div class="table-header">Teslimat Numarası: ${code}</div>
       <table>
         <tr>
           <th>TARİH</th>
           <th>DURUM</th>
         </tr>
-        <tr>
-          <td>05.04.2024 06:28</td>
-          <td>Gönderi dağıtım şubesinde.</td>
-        </tr>
-        <tr>
-          <td>05.04.2024 05:57</td>
-          <td>Gönderi varış transfer merkezinde.</td>
-        </tr>
-        <tr>
-          <td>02.04.2024 17:59</td>
-          <td>Gönderi çıkış hat aracına yüklendi.</td>
-        </tr>
-        <tr>
-          <td>02.04.2024 17:55</td>
-          <td>Gönderi çıkış transfer merkezinde.</td>
-        </tr>
-        <tr>
-          <td>02.04.2024 13:48</td>
-          <td>Gönderi çıkış şube aracına yüklendi.</td>
-        </tr>
-        <tr>
-          <td>02.04.2024 09:40</td>
-          <td>Gönderi kabulü yapıldı.</td>
-        </tr>
+        ${rows}
       </table>
     </div>`;
   }
@@ -271,6 +283,7 @@ function checkTracking(){
     table.innerHTML="";
   }
 }
+
 </script>
 
 </body>
